app/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop
  labels:
    name: shop
---
apiVersion: v1
kind: Namespace
metadata:
  name: tea
  labels:
    name: tea
---
apiVersion: v1
kind: Namespace
metadata:
  name: coffee
  labels:
    name: coffee
