app/coffee-svc-brdige.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc-bridge
  namespace: shop
spec:
  type: ExternalName
  externalName: coffee-api.coffee
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
