app/coffee.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: coffee
  name: coffee-api
  labels:
    app: coffee-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: coffee-api
