app/tea.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: tea
  name: tea-api
  labels:
    app: tea-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: tea-api
